crates/glyph-cli/tests/corpus/valid/imports/fix_bug.glyph
import "./repo_tools.glyph" { inspect_repo }
import "./prefs.glyph" { preserve_existing_patterns }

skill fix_bug(scope = ".") -> Report
    description: "Fix a bug in the codebase."
    constraints:
        require preserve_existing_patterns
    flow:
        ctx = inspect_repo(scope)
        return ctx
