crates/glyph-cli/tests/corpus/invalid/imports/import_skill.glyph
import "./lib_with_skill.glyph" { some_skill }

skill main()
    description: "Main."
    flow:
        "Do something."
